Fix taskslist overflowing vertically

--- a/src/app/tasks/tasks.css
+++ b/src/app/tasks/tasks.css
@@ -102,6 +102,7 @@
   padding: 1rem;
   background-color: #222;
   border-radius: 10px;
+  max-height: 55vh;
 }
 
 .newTask {
